[package]
name = "snap_cli"
version = "0.1.5"
authors = ["Blue"]
edition = "2021"
description = "A simple CLI library"
readme = "README.md"
keywords = ["cli", "command-line", "snap"]
categories = ["command-line-utilities", "cli"]
license = "MIT"
repository = "https://github.com/DeveloperJosh/snap_cli"

[dependencies]
thiserror = "1.0.61"